// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creating a style node should have the correct attributes 1`] = `
Object {
  "_media": undefined,
  "_support": undefined,
  "html": "<style data-fela-type=\\"RULE\\" type=\\"text/css\\"></style>",
}
`;

exports[`Creating a style node should have the correct attributes 2`] = `
Object {
  "_media": "(min-width:300px)",
  "_support": undefined,
  "html": "<style data-fela-type=\\"RULE\\" type=\\"text/css\\" media=\\"(min-width:300px)\\"></style>",
}
`;

exports[`Creating a style node should have the correct attributes 3`] = `
Object {
  "_media": undefined,
  "_support": "(display:flex)",
  "html": "<style data-fela-type=\\"RULE\\" type=\\"text/css\\" data-fela-support=\\"true\\"></style>",
}
`;

exports[`Creating a style node should have the correct attributes 4`] = `
Object {
  "_media": "(min-width:300px)",
  "_support": "(display:flex)",
  "html": "<style data-fela-type=\\"RULE\\" type=\\"text/css\\" data-fela-support=\\"true\\" media=\\"(min-width:300px)\\"></style>",
}
`;

exports[`Creating a style node should respect the correct order 1`] = `
"<head>
  <style data-fela-type=\\"STATIC\\" type=\\"text/css\\"></style>
  <style data-fela-type=\\"KEYFRAME\\" type=\\"text/css\\"></style>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\"></style>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\" media=\\"(min-width:300px)\\"></style>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\" data-fela-support=\\"true\\" media=\\"(min-width:300px)\\"></style>
</head>"
`;
